--- a/Fatsecret/app/src/main/res/layout/activity_login.xml
+++ b/Fatsecret/app/src/main/res/layout/activity_login.xml
@@ -35,15 +35,13 @@
                 android:layout_marginTop="24dp"
                 app:cardCornerRadius="70dp"
                 app:cardElevation="12dp"
-                app:cardBackgroundColor="@color/white">
+                app:cardBackgroundColor="?attr/colorSurface">
 
                 <ImageView
                     android:layout_width="120dp"
-                    android:layout_height="120dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_app_logo"
-                    android:contentDescription="FatSecret Logo"
-                    android:scaleType="centerInside" />
+                    android:src="@drawable/logo_vinker"/>
 
             </androidx.cardview.widget.CardView>
 
