--- a/Fatsecret/app/src/main/res/layout/activity_register.xml
+++ b/Fatsecret/app/src/main/res/layout/activity_register.xml
@@ -15,14 +15,23 @@
         android:padding="24dp">
 
         <!-- Header -->
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+        <androidx.cardview.widget.CardView
+            android:layout_width="140dp"
+            android:layout_height="140dp"
             android:layout_gravity="center"
-            android:layout_marginTop="32dp"
             android:layout_marginBottom="24dp"
-            android:contentDescription="FatSecret Logo"
-            android:src="@drawable/ic_app_logo" />
+            android:layout_marginTop="24dp"
+            app:cardCornerRadius="70dp"
+            app:cardElevation="12dp"
+            app:cardBackgroundColor="?attr/colorSurface">
+
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/logo_vinker"/>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="wrap_content"
