--- a/Fatsecret/app/src/main/res/layout/fragment_profile.xml
+++ b/Fatsecret/app/src/main/res/layout/fragment_profile.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/android:colorBackground"
-    android:padding="20dp"
     android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:background="@drawable/wave_top"
         android:orientation="vertical">
 
         <!-- ✅ Enhanced Header Section -->
